--- a/src/components/item-details/item-details.module.scss
+++ b/src/components/item-details/item-details.module.scss
@@ -41,6 +41,7 @@
                 color: var(--darkGrey);
                 margin-top: 32px;
                 font-size: 16px;
+                word-wrap: break-word;
             }
         }
     }
